# lexio

./: .dockerignore  .gitignore  .tool-versions  CONTRIBUTING.md  Makefile  README.md  TODOS.md  db_utils.py  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: check.yml  daily-security-report.yml  python-build-and-check.yml  python-lexio.yml  release-npm.yml  release-pypi.yml  release-python-package.yml  test.yml
demos/langchain-demo/: .gitignore  README.md
demos/langchain-demo/backend/: pyproject.toml
demos/langchain-demo/backend/.chroma/: chroma.sqlite3
demos/langchain-demo/backend/src/langchain_demo/: __init__.py  indexing.py  main.py
demos/langchain-demo/frontend/: package-lock.json  package.json  vite.config.ts
docs/: README.md
examples/advanced-local-rag/: README.md
examples/advanced-local-rag/backend/: .gitignore  build_index.py  db_utils.py  main.py  requirements.txt
examples/advanced-local-rag/frontend/: package-lock.json  package.json
examples/advanced-rag/: README.md
examples/advanced-rag/backend/: build_index.py  db_utils.py  db_utils.test.py  main.py  main.test.py  requirements.txt
examples/advanced-rag/frontend/: package-lock.json  package.json
examples/langchain/: .gitignore  Makefile  README.md  docker-compose.yml
examples/langchain-demo/: .gitignore  Makefile  README.md
examples/langchain-demo/backend/: pyproject.toml
examples/langchain-demo/frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
examples/langchain/backend/: Dockerfile  pyproject.toml
examples/langchain/backend/src/: indexing.py  main.py  tools.py  utils.py
examples/langchain/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
examples/langchain/frontend-new/: README.md  package-lock.json
examples/llama-index/: Makefile  package.json
examples/llama-index-highlight/backend/: main.py
examples/llama-index/backend/: .gitignore  main.py  main_with_highlighting.py  requirements.txt
examples/llama-index/frontend/: package-lock.json  package.json
examples/rag-ui/frontend/: README.md  package-lock.json  package.json  tsconfig.json
fastapi-example/: .gitignore  main.py  requirements.txt
lexio/: .gitignore  .prettierignore  .prettierrc  .prettierrc.cjs  .prettierrc.js  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
lexio/.storybook/: lexio.js  manager.js  preview.ts  preview.tsx
lexio/lib/: main.ts  types.ts
lexio/lib/components/: ApplicationMainContent.tsx
lexio/lib/connectors/: createRESTConnector.ts  createRESTContentSource.ts  createSSEConnector.ts  useRestRetrieveAndGenerateSource.ts  useSSEGenerateSource.ts
lexio/lib/explanation/: chunking.ts  clause_extractor.ts  config.ts  dependencies.ts  embedding-matching.ts  embedding.ts  heuristic-matching.ts  ideaSplitter.test.ts  ideaSplitter.ts  index.ts  matching.ts  matching_advanced.ts  matching_heuristic.ts  preprocessing.ts  tokenizer.ts  types.d.ts  worker.ts  workerWrapper.ts
lexio/lib/hooks/: hooks.ts  index.ts  useTheme.ts
lexio/scripts/: generate-json-schema.js  types-to-include.json
lexio/src/: App.tsx  HighlightedMessage.tsx  index.css  sbd.d.ts  vite-env.d.ts
lib/: types.ts
lib/connectors/: createRESTConnector.ts
lib/hooks/: index.ts
lib/theme/: index.ts
lib/utils/: scaleFontSize.tsx
python/lexio/: .coverage  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
python/lexio/lexio/: __init__.py  _version.py  version.py
python/lexio/lexio/types/: __init__.py
python/lexio/python/lexio/scripts/: generate_init.py
python/lexio/scripts/: generate-types.sh  generate_init.py  post_process_types.py  setup-dev-env.sh  types-to-include.json  types.json
python/lexio/tests/: README.md  __init__.py  test_types.py
rag-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.lib.json  vite.config.ts  vitest.config.js
rag-ui/.storybook/: lexio.js  preview.ts
rag-ui/lib/: main.ts  tailwind.css  types.ts
rag-ui/scripts/: convert.js  generate-json-schema.js  generate-python-types.js  types-to-include.json
rag-ui/src/: App.tsx
scripts/: sync-version.js  types-to-include.json
src/stories/: welcome.mdx
storybook-static/: iframe.html  index.json  lexio.d.ts  project.json
storybook-static/assets/: 01_action_handler_pattern.stories-DBAfPzYA.js  01_error_handling.stories-D2tL6gaf.js  02_state_management.stories-B0NYbfg1.js  02_theming.stories-BxQ1RyIi.js  03_overriding_styles.stories-N_j9nVGP.js  03_source_management.stories-D8atrlIo.js  04_streaming_responses.stories-BCwwkNmn.js  04_using_connectors.stories-BtSB1DFn.js  05_custom_component.stories-EmF8lUyK.js  05_user_feedback.stories-D9n2c642.js  AdvancedQueryField-dmwBg1V3.js  AdvancedQueryField.stories-eaeJb10M.js  ChatWindow-DByjvp2V.js  ChatWindow.stories-DG3Nd4L2.js  Color-YHDXOIA2-zjVmBkcT.js  ContentDisplay-D19Pf_Rz.js  DocsRenderer-CFRXHY34-SyNh0Del.js  DocumentPlusIcon-p4mHEHYC.js  HTMLViewer.stories-BT17rodr.js  LexioProvider.stories-BCO7Gj3o.js  MarkdownViewer-CI_XVU6M.js  MarkdownViewer.stories-DWged3He.js  PDFViewer.stories-DdNvlouX.js  PdfViewer-fnhOmsH7.js  QueryField-HQujzfL2.js  QueryField.stories-bfCzMXcY.js  SourcesDisplay-CsqesJNF.js  SourcesDisplay.stories-DenL2Ge1.js  advanced-local-rag-C7qxCNVO.js  concepts-C9wTaS3-.js  entry-preview-BtBEmNfU.js  entry-preview-docs-De5agCo6.js  floating-ui.react-DaSCc_fA.js  helper-Ckk0Nnss.js  hooks-DNVfckEt.js  iframe-DTK7Rc-o.js  index-CuqvArXI.js  index-DvK65IPP.js  index-EuO1YB73.js  llama-index-C63GYfjV.js  (+7 more)
(+339 files in other folders)
